# ConsultEase

./: .gitignore  commands.txt  main.py  package-lock.json  package.json  pyproject.toml  railway.json  test_agents.py  test_document_metadata.py  test_fixes.py  test_smart_contracts.py  test_smart_deliverables.py  test_smart_time_entry.py
backend/: STORAGE_SETUP.md  create_second_contract.py  disable_audit_triggers.sql  performance_test.py  pyproject.toml  test_acme_billing_update.py  test_async_db.py  test_contracts.py  test_deletion_detection.py  test_html.html  test_hybrid_integration.py  test_langgraph_debug.py  test_storage.py
backend/src/: main.py
backend/src/aiagents/: __init__.py  agent_orchestrator.py  cache_manager.py  client_agent.py  contract_agent.py  deliverable_agent.py  employee_agent.py  prompts.py  time_agent.py  user_agent.py
backend/src/aiagents/agents_sdk/: __init__.py  agent_factory.py  memory_store.py  tool_definitions.py
backend/src/aiagents/graph/: ROUTING_INTEGRATION_SUMMARY.md  agents_sdk_integration.py  graph.py  (+8 more)
backend/src/auth/: dependencies.py  middleware.py  routes.py  schemas.py  session_manager.py
backend/src/services/: auth_service.py  storage_service.py
backend/tests/: create_test_user.py  debug_extraction.py  insert_test_data.py  test_agent_graph.py  test_api_endpoints.py  test_client_update.py  test_clients_with_contracts.py  test_comprehensive_scenarios.py  test_contract_creation.py  test_contract_search.py  test_contract_update.py  test_critical_fixes.py  test_employee_agent.py  test_fallback_logic.py  test_final_demo.py  test_real_scenarios.py  test_simple_endpoints.py  test_with_bypass.py
backend/tests/test_phase1/: __init__.py  test_enhanced_agents.py
(+102 files in other folders)
