[project]
name = "consultease"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langgraph>=0.6.5",
    "openai>=1.99.9",
    "openai-agents>=0.2.8",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "supabase>=2.18.1",
    "uvicorn>=0.35.0",
]
