[project]
name = "ConsultEase"
version = "0.1.0"
description = "ConsultEase Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langgraph>=0.6.5",
    "openai>=1.99.9",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "supabase>=2.18.1",
    "uvicorn>=0.35.0",
    "requests>=2.31.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.10",
    "python-dateutil>=2.9,<3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "pytest-asyncio>=1.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
